[package]
name = "kera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/kera-macros"]

[dependencies]
derive_more = "0.99.17"
kera-macros = { path = "crates/kera-macros" }
phf = { version = "0.11", features = ["macros"] }
anyhow = "1"
